# frame

./: .gitignore  CITATION.cff  LICENSE  README.md  parameters.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: flake8.yml
frame/: evaluate.py  explain.py  generate.py  scaffold_split.py  train.py  tune.py
frame/source/datasets/: __init__.py  decompose.py  default.py  scaffold.py
frame/source/explain/: __init__.py  aggregate.py  metrics_explain.py  pharmacophores.py
frame/source/models/: __init__.py  fbdd.py  pyg_models.py
frame/source/train/: __init__.py  epoch.py  metrics.py  runner.py
frame/source/utils/: __init__.py
placeholder/: explain.py  generate.py  train.py  tune.py
placeholder/source/datasets/: __init__.py  decompose.py  decompose_v2.py
placeholder/source/explain/: __init__.py
placeholder/source/models/: __init__.py  pyg_models.py  tentative.py
placeholder/source/train/: __init__.py  epoch.py  optimizer.py
placeholder/source/utils/: __init__.py  logs.py
