[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["placeholder"]

[project]
name = "placeholder"
version = "0.0.0"
requires-python = ">=3.12"
authors = [{name = "Rafael Lopes", email = "rafael.lopes@uef.fi"}]
readme = "README.md"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["bump-my-version==1.1.2",
       "gitchangelog==3.0.4",
       "pytest==8.3.5",
       "pytest-cov==6.1.1",
       "pytest-depends==1.0.1",
       "pytest-flake8==1.3.0"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
