[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frame"
version = "0.0.0"
requires-python = ">=3.11"
authors = [{name = "Rafael Lopes", email = "rafael.lopes@uef.fi"}]
readme = "README.md"
description = ""
dependencies = ["torch==2.11.0",
                "captum==0.9.0",
                "joblib==1.5.3",
                "optuna==4.8.0",
                "pandas==3.0.2",
                "plotly==6.7.0",
                "rdkit==2026.3.1",
                "optuna==4.8.0",
                "pandas==3.0.2",
                "scikit-learn==1.8.0",
                "svgutils==0.3.4",
                "torch-geometric==2.7.0"]

[project.scripts]
frame_tune = "frame.tune:main"
frame_train = "frame.train:main"
frame_gen = "frame.generate:main"
frame_eval = "frame.evaluate:main"
frame_explain = "frame.explain:main"
frame_scaffold = "frame.scaffold_split:main"

[dependency-groups]
dev = ["bump-my-version==1.3.0",
       "flake8==7.3.0",
       "generate-changelog==0.17.0"]

[tool.hatch.build.targets.wheel]
packages = ["frame"]

[tool.uv]
package = true
find-links = ["https://download.pytorch.org/whl/cu128"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.bumpversion]
current_version = "0.0.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
